[gd_scene load_steps=4 format=2]

[ext_resource path="res://Rune.gd" type="Script" id=1]
[ext_resource path="res://Letter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 33 )

[node name="Rune" type="Node2D"]
position = Vector2( 55, 528 )
script = ExtResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
margin_top = -136.0
margin_right = 136.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Letter" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 68, -68 )
shape = SubResource( 1 )

[connection signal="input_event" from="HitArea" to="." method="_on_HitArea_input_event"]
[connection signal="mouse_entered" from="HitArea" to="." method="_on_HitArea_mouse_entered"]
